--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,6 @@
 }
 
 
-
-
 /* Chart card umum */
 .card-chart {
     background: #fff;
@@ -116,7 +114,7 @@
 }
 
 .content {
-    flex: 1 !important;
+    flex: 1 ;
 }
 
 
